# cli-client

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  config.h.in  main.cc
src/reduct_cli/: app.cc  app.h
tests/: CMakeLists.txt
tests/reduct_cli/: controller_test.cc
